Fix formatting and comments. Update to the latest JarJar